[project]
name = "pycon2024-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.1",
    "fastapi>=0.115.3",
    "gradio>=5.4.0",
    "matplotlib>=3.9.2",
    "shiny>=1.1.0",
    "streamlit>=1.39.0",
    "uvicorn>=0.32.0",
    "websocket-client>=1.8.0",
]

[tool.uv]
dev-dependencies = [
    "locust>=2.32.0",
    "ruff>=0.7.0",
]

[tool.uv.workspace]
members = ["performance_inspection"]
